// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle> rendering with children should match snapshot 1`] = `
<div
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <ToggleOn
        handleMouseOut={[Function]}
        handleMouseOver={[Function]}
        isChecked={false}
        isDisabled={false}
        isMouseOver={false}
        key=".0"
        name="toggle"
        onChange={[Function]}
      >
        On
      </ToggleOn>
      <ToggleOff
        handleMouseOut={[Function]}
        handleMouseOver={[Function]}
        isChecked={false}
        isDisabled={false}
        isMouseOver={false}
        key=".1"
        name="toggle"
        onChange={[Function]}
      >
        Off
      </ToggleOff>
      <ToggleSwitch
        className="toggleSwitch"
        isChecked={false}
        isDisabled={false}
        isMouseOver={false}
      />
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="toggle"
        onChange={[Function]}
        type="checkbox"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Toggle> rendering without children should match snapshot 1`] = `
<div
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <ToggleSwitch
        className="toggleSwitch"
        isChecked={false}
        isDisabled={false}
        isMouseOver={false}
      />
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="toggle"
        onChange={[Function]}
        type="checkbox"
      />
    </Inline>
  </label>
</div>
`;
